<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:text="Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDateOfBirth"
        android:textSize="20sp"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Date of Birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewCity"
        android:textSize="20sp"
        android:layout_width="252dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDateOfBirth" />

    <LinearLayout
        android:layout_width="388dp"
        android:layout_height="528dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewCity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBloodPressure"
            android:text="Blood Pressure"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:layout_weight="1"></Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSleep"
            android:text="Sleep"
            android:textSize="25sp"
            android:layout_margin="5dp"
            android:layout_weight="1"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonBloodSugar"
            android:text="Blood Sugar"
            android:layout_margin="5dp"
            android:textSize="25sp"
            android:layout_weight="1"></Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonWeight"
            android:textSize="25sp"
            android:text="Weight"
            android:layout_margin="5dp"
            android:layout_weight="1"></Button>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>