<resources>
    <string name="app_name">VitalsApp</string>
</resources>